// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<RegistrationForm /> renders a form with dynamic fields 1`] = `
<form
  id="registration-form"
  onSubmit={[MockFunction]}
>
  <Field
    ariaRequired={true}
    autoComplete="username"
    component={[Function]}
    id="username"
    label={
      <FormattedMessage
        id="registration.username"
        values={Object {}}
      />
    }
    labelClassName="font-weight-normal"
    name="username"
    type="text"
  />
  <Field
    ariaRequired={true}
    autoComplete="email"
    component={[Function]}
    id="email"
    label={
      <FormattedMessage
        id="global.email"
        values={Object {}}
      />
    }
    labelClassName="font-weight-normal"
    name="email"
    popover={
      Object {
        "id": "registration-email-tooltip",
        "message": <FormattedMessage
          id="registration.tooltip.email"
          values={Object {}}
        />,
      }
    }
    type="email"
  />
  <Connect(UserPasswordField)
    ariaRequired={true}
    autoComplete="new-password"
    formName="registration-form"
    id="password"
    label={
      <FormattedMessage
        id="registration.password"
        values={Object {}}
      />
    }
    labelClassName="font-weight-normal"
    name="plainPassword"
  />
  <ReactRelayQueryRenderer
    environment={"RelayModernEnvironment()"}
    query={[Function]}
    render={[Function]}
    variables={Object {}}
  />
  <Field
    ariaRequired={true}
    component={[Function]}
    id="charte"
    labelClassName="font-weight-normal"
    name="charte"
    type="checkbox"
  >
    <span>
      <FormattedMessage
        id="registration.charte"
        values={
          Object {
            "link": <Button
              active={false}
              block={false}
              bsClass="btn"
              bsStyle="link"
              className="p-0 text-decoration-none"
              disabled={false}
              onClick={[Function]}
              variant="link"
            >
              la charte
            </Button>,
          }
        }
      />
       
      <Connect(PrivacyModal)
        className="text-decoration-none"
        linkKeyword="and-the"
        title="capco.module.privacy_policy"
      />
    </span>
  </Field>
  <Field
    component={[Function]}
    id="consent-internal-communication"
    labelClassName="font-weight-normal"
    name="consentInternalCommunication"
    type="checkbox"
  >
    <FormattedMessage
      id="receive-news-and-results-of-the-consultations"
      values={
        Object {
          "from": "de Cap Collectif",
        }
      }
    />
  </Field>
  <Field
    component={[Function]}
    id="consent-external-communication"
    labelClassName="font-weight-normal"
    name="consentExternalCommunication"
    type="checkbox"
  >
    <FormattedMessage
      id="registration.consent_external_communication"
      values={
        Object {
          "organization_name": "Cap Collectif",
        }
      }
    />
  </Field>
  <Field
    component={[Function]}
    id="captcha"
    name="captcha"
    type="captcha"
  />
</form>
`;

exports[`<RegistrationForm /> renders a form with inputs and a captcha 1`] = `
<form
  id="registration-form"
  onSubmit={[MockFunction]}
>
  <Field
    ariaRequired={true}
    autoComplete="username"
    component={[Function]}
    id="username"
    label={
      <FormattedMessage
        id="registration.username"
        values={Object {}}
      />
    }
    labelClassName="font-weight-normal"
    name="username"
    type="text"
  />
  <Field
    ariaRequired={true}
    autoComplete="email"
    component={[Function]}
    id="email"
    label={
      <FormattedMessage
        id="global.email"
        values={Object {}}
      />
    }
    labelClassName="font-weight-normal"
    name="email"
    popover={
      Object {
        "id": "registration-email-tooltip",
        "message": <FormattedMessage
          id="registration.tooltip.email"
          values={Object {}}
        />,
      }
    }
    type="email"
  />
  <Connect(UserPasswordField)
    ariaRequired={true}
    autoComplete="new-password"
    formName="registration-form"
    id="password"
    label={
      <FormattedMessage
        id="registration.password"
        values={Object {}}
      />
    }
    labelClassName="font-weight-normal"
    name="plainPassword"
  />
  <Field
    ariaRequired={true}
    component={[Function]}
    id="charte"
    labelClassName="font-weight-normal"
    name="charte"
    type="checkbox"
  >
    <span>
      <FormattedMessage
        id="registration.charte"
        values={
          Object {
            "link": <Button
              active={false}
              block={false}
              bsClass="btn"
              bsStyle="link"
              className="p-0 text-decoration-none"
              disabled={false}
              onClick={[Function]}
              variant="link"
            >
              la charte
            </Button>,
          }
        }
      />
       
      <Connect(PrivacyModal)
        className="text-decoration-none"
        linkKeyword="and-the"
        title="capco.module.privacy_policy"
      />
    </span>
  </Field>
  <Field
    component={[Function]}
    id="consent-internal-communication"
    labelClassName="font-weight-normal"
    name="consentInternalCommunication"
    type="checkbox"
  >
    <FormattedMessage
      id="receive-news-and-results-of-the-consultations"
      values={
        Object {
          "from": "de Cap Collectif",
        }
      }
    />
  </Field>
  <Field
    component={[Function]}
    id="consent-external-communication"
    labelClassName="font-weight-normal"
    name="consentExternalCommunication"
    type="checkbox"
  >
    <FormattedMessage
      id="registration.consent_external_communication"
      values={
        Object {
          "organization_name": "Cap Collectif",
        }
      }
    />
  </Field>
  <Field
    component={[Function]}
    id="captcha"
    name="captcha"
    type="captcha"
  />
</form>
`;

exports[`<RegistrationForm /> renders a form with user_type select if enabled 1`] = `
<form
  id="registration-form"
  onSubmit={[MockFunction]}
>
  <Field
    ariaRequired={true}
    autoComplete="username"
    component={[Function]}
    id="username"
    label={
      <FormattedMessage
        id="registration.username"
        values={Object {}}
      />
    }
    labelClassName="font-weight-normal"
    name="username"
    type="text"
  />
  <Field
    ariaRequired={true}
    autoComplete="email"
    component={[Function]}
    id="email"
    label={
      <FormattedMessage
        id="global.email"
        values={Object {}}
      />
    }
    labelClassName="font-weight-normal"
    name="email"
    popover={
      Object {
        "id": "registration-email-tooltip",
        "message": <FormattedMessage
          id="registration.tooltip.email"
          values={Object {}}
        />,
      }
    }
    type="email"
  />
  <Connect(UserPasswordField)
    ariaRequired={true}
    autoComplete="new-password"
    formName="registration-form"
    id="password"
    label={
      <FormattedMessage
        id="registration.password"
        values={Object {}}
      />
    }
    labelClassName="font-weight-normal"
    name="plainPassword"
  />
  <Field
    component={[Function]}
    id="user_type"
    label={
      <span>
        <FormattedMessage
          id="registration.type"
          values={Object {}}
        />
         
        <span
          className="excerpt"
        >
          <FormattedMessage
            id="global.form.optional"
            values={Object {}}
          />
        </span>
      </span>
    }
    labelClassName="font-weight-normal"
    name="userType"
    type="select"
  >
    <FormattedMessage
      id="registration.select.type"
      values={Object {}}
    >
      <Component />
    </FormattedMessage>
    <option
      key="1"
      value={1}
    >
      type_1
    </option>
  </Field>
  <Field
    ariaRequired={true}
    component={[Function]}
    id="charte"
    labelClassName="font-weight-normal"
    name="charte"
    type="checkbox"
  >
    <span>
      <FormattedMessage
        id="registration.charte"
        values={
          Object {
            "link": <Button
              active={false}
              block={false}
              bsClass="btn"
              bsStyle="link"
              className="p-0 text-decoration-none"
              disabled={false}
              onClick={[Function]}
              variant="link"
            >
              la charte
            </Button>,
          }
        }
      />
       
      <Connect(PrivacyModal)
        className="text-decoration-none"
        linkKeyword="and-the"
        title="capco.module.privacy_policy"
      />
    </span>
  </Field>
  <Field
    component={[Function]}
    id="consent-internal-communication"
    labelClassName="font-weight-normal"
    name="consentInternalCommunication"
    type="checkbox"
  >
    <FormattedMessage
      id="receive-news-and-results-of-the-consultations"
      values={
        Object {
          "from": "de Cap Collectif",
        }
      }
    />
  </Field>
  <Field
    component={[Function]}
    id="consent-external-communication"
    labelClassName="font-weight-normal"
    name="consentExternalCommunication"
    type="checkbox"
  >
    <FormattedMessage
      id="registration.consent_external_communication"
      values={
        Object {
          "organization_name": "Cap Collectif",
        }
      }
    />
  </Field>
  <Field
    component={[Function]}
    id="captcha"
    name="captcha"
    type="captcha"
  />
</form>
`;

exports[`<RegistrationForm /> renders a form with zipcode if enabled 1`] = `
<form
  id="registration-form"
  onSubmit={[MockFunction]}
>
  <Field
    ariaRequired={true}
    autoComplete="username"
    component={[Function]}
    id="username"
    label={
      <FormattedMessage
        id="registration.username"
        values={Object {}}
      />
    }
    labelClassName="font-weight-normal"
    name="username"
    type="text"
  />
  <Field
    ariaRequired={true}
    autoComplete="email"
    component={[Function]}
    id="email"
    label={
      <FormattedMessage
        id="global.email"
        values={Object {}}
      />
    }
    labelClassName="font-weight-normal"
    name="email"
    popover={
      Object {
        "id": "registration-email-tooltip",
        "message": <FormattedMessage
          id="registration.tooltip.email"
          values={Object {}}
        />,
      }
    }
    type="email"
  />
  <Connect(UserPasswordField)
    ariaRequired={true}
    autoComplete="new-password"
    formName="registration-form"
    id="password"
    label={
      <FormattedMessage
        id="registration.password"
        values={Object {}}
      />
    }
    labelClassName="font-weight-normal"
    name="plainPassword"
  />
  <Field
    autoComplete="postal-code"
    component={[Function]}
    id="zipcode"
    label={
      <span>
        <FormattedMessage
          id="registration.zipcode"
          values={Object {}}
        />
         
        <span
          className="excerpt"
        >
          <FormattedMessage
            id="global.form.optional"
            values={Object {}}
          />
        </span>
      </span>
    }
    labelClassName="font-weight-normal"
    name="zipcode"
    type="text"
  />
  <Field
    ariaRequired={true}
    component={[Function]}
    id="charte"
    labelClassName="font-weight-normal"
    name="charte"
    type="checkbox"
  >
    <span>
      <FormattedMessage
        id="registration.charte"
        values={
          Object {
            "link": <Button
              active={false}
              block={false}
              bsClass="btn"
              bsStyle="link"
              className="p-0 text-decoration-none"
              disabled={false}
              onClick={[Function]}
              variant="link"
            >
              la charte
            </Button>,
          }
        }
      />
       
      <Connect(PrivacyModal)
        className="text-decoration-none"
        linkKeyword="and-the"
        title="capco.module.privacy_policy"
      />
    </span>
  </Field>
  <Field
    component={[Function]}
    id="consent-internal-communication"
    labelClassName="font-weight-normal"
    name="consentInternalCommunication"
    type="checkbox"
  >
    <FormattedMessage
      id="receive-news-and-results-of-the-consultations"
      values={
        Object {
          "from": "de Cap Collectif",
        }
      }
    />
  </Field>
  <Field
    component={[Function]}
    id="consent-external-communication"
    labelClassName="font-weight-normal"
    name="consentExternalCommunication"
    type="checkbox"
  >
    <FormattedMessage
      id="registration.consent_external_communication"
      values={
        Object {
          "organization_name": "Cap Collectif",
        }
      }
    />
  </Field>
  <Field
    component={[Function]}
    id="captcha"
    name="captcha"
    type="captcha"
  />
</form>
`;
